--- a/airport.html
+++ b/airport.html
@@ -19,7 +19,7 @@
             property="og:description"
             content="Informacije o prevozu do i od Medjunarodnog aerodroma Banja Luka, ukljucujuci cijene, stajalista i polaske."
         />
-        <meta property="og:image" content="https://blum.ba/assets/images/gradski-prevoz-mapa-banja-luka.png" />
+        <meta property="og:image" content="https://blum.ba/assets/images/gradski-prevoz-mapa-banja-luka.webp" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://blum.ba/airport.html" />
         <meta name="twitter:card" content="summary_large_image" />
