--- a/faq.html
+++ b/faq.html
@@ -19,7 +19,7 @@
             property="og:description"
             content="Najcesca pitanja i odgovori o koristenju BLum platforme, linijama, kartama i javnom prevozu u Banjoj Luci."
         />
-        <meta property="og:image" content="https://blum.ba/assets/images/gradski-prevoz-mapa-banja-luka.png" />
+        <meta property="og:image" content="https://blum.ba/assets/images/gradski-prevoz-mapa-banja-luka.webp" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://blum.ba/faq.html" />
         <meta name="twitter:card" content="summary_large_image" />
