--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             property="og:description"
             content="BLum je nezavisna platforma za informacije o javnom prevozu, linijama i urbanoj mobilnosti u Banjoj Luci."
         />
-        <meta property="og:image" content="https://blum.ba/assets/images/gradski-prevoz-mapa-banja-luka.png" />
+        <meta property="og:image" content="https://blum.ba/assets/images/gradski-prevoz-mapa-banja-luka.webp" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://blum.ba/" />
         <meta name="twitter:card" content="summary_large_image" />
