--- a/lines.html
+++ b/lines.html
@@ -19,7 +19,7 @@
             property="og:description"
             content="Pregled gradskih i prigradskih linija, mape trasa i reda voznje javnog prevoza u Banjoj Luci."
         />
-        <meta property="og:image" content="https://blum.ba/assets/images/gradski-prevoz-mapa-banja-luka.png" />
+        <meta property="og:image" content="https://blum.ba/assets/images/gradski-prevoz-mapa-banja-luka.webp" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://blum.ba/lines.html" />
         <meta name="twitter:card" content="summary_large_image" />
