--- a/pricing.html
+++ b/pricing.html
@@ -19,7 +19,7 @@
             property="og:description"
             content="Aktuelne cijene karata i pretplatnih opcija za javni prevoz u Banjoj Luci na jednom mjestu."
         />
-        <meta property="og:image" content="https://blum.ba/assets/images/gradski-prevoz-mapa-banja-luka.png" />
+        <meta property="og:image" content="https://blum.ba/assets/images/gradski-prevoz-mapa-banja-luka.webp" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://blum.ba/pricing.html" />
         <meta name="twitter:card" content="summary_large_image" />
