--- a/airport.html
+++ b/airport.html
@@ -95,7 +95,8 @@
                                             <span data-lang="en" style="display: none">Departure point</span>
                                         </p>
                                         <p id="airport-departure-location" class="airport-info-block__value">
-                                            Svi polasci su sa Stare autobuske stanice (Vidovdanska ulica).
+                                            Svi polasci su sa Stare autobuske stanice (Vidovdanska ulica) i Glavne
+                                            (Nove) autobuske stanice.
                                         </p>
                                     </div>
                                 </div>
@@ -108,8 +109,8 @@
                                     id="airport-website-link"
                                     class="airport-link"
                                     rel="noopener noreferrer"
-                                    >Smiljić Company - Avio transferi</a
-                                >
+                                    >Avio transferi
+                                </a>
                             </div>
                             <div class="map-container small-map">
                                 <div id="airport-map" aria-label="Departure location map"></div>
