--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
             content="default-src 'self'; script-src 'self' https://unpkg.com https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://*.tile.openstreetmap.org https://basemaps.cartocdn.com https://tiles.stadiamaps.com https://server.arcgisonline.com; connect-src 'self' https://unpkg.com https://cdnjs.cloudflare.com; base-uri 'self'; form-action 'self';"
         />
         <title>FAQ | BLum</title>
-        <link rel="canonical" href="https://blum.ba/faq.html" />
+        <link rel="canonical" href="https://open-data-bih.github.io/blum-project/faq.html" />
         <meta
             name="description"
             content="Najcesca pitanja i odgovori o koristenju BLum platforme, linijama, kartama i javnom prevozu u Banjoj Luci."
@@ -19,9 +19,9 @@
             property="og:description"
             content="Najcesca pitanja i odgovori o koristenju BLum platforme, linijama, kartama i javnom prevozu u Banjoj Luci."
         />
-        <meta property="og:image" content="https://blum.ba/assets/images/gradski-prevoz-mapa-banja-luka.webp" />
+        <meta property="og:image" content="https://open-data-bih.github.io/blum-project/assets/images/gradski-prevoz-mapa-banja-luka.webp" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://blum.ba/faq.html" />
+        <meta property="og:url" content="https://open-data-bih.github.io/blum-project/faq.html" />
         <meta name="twitter:card" content="summary_large_image" />
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
